2008-02-04  Thorsten Kukuk  <kukuk@thkukuk.de>

	* libpam/pam_static_modules.h: Add _pam_sepermit_modstruct.
	* modules/pam_sepermit/pam_sepermit.c: Fix typo.

	* README: Add --disable-pie to configure options for static library.

	* doc/man/Makefile.am: Fix building outside of src directory.

2008-02-01  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_namespace/namespace.conf.5.xml: Add documentation for
	tmpfs and tmpdir polyinst and for ~ user list modifier.
	* modules/pam_namespace/namespace.init: Add documentation for the
	new init parameter. Add home directory initialization script.
	* modules/pam_namespace/pam_namespace.8.xml: Document the new
	init parameter of the namespace.init script.
	* modules/pam_namespace/pam_namespace.c(copy_ent): Copy exclusive flag.
	(cleanup_data): New function.
	(process_line): Set exclusive flag. Add tmpfs and tmpdir methods.
	(ns_override): Change behavior on the exclusive flag.
	(poly_name): Process tmpfs and tmpdir methods.
	(inst_init): Add flag for new directory initialization.
	(create_dirs): Process the tmpdir method, add the new directory
	flag.
	(ns_setup): Remove unused code. Process the tmpfs method.
	(cleanup_tmpdirs): New function.
	(setup_namespace): Set data for proper cleanup. Cleanup the tmpdirs
	on failures.
	(pam_sm_close_session): Instead of parsing the config file again use
	the previously set data for cleanup.
	* modules/pam_namespace/pam_namespace.h: Add TMPFS and TMPDIR methods
	and exclusive flag.

2008-01-29  Tomas Mraz  <t8m@centrum.cz>

	* configure.in: Test for setkeycreatecon needs libselinux.
	Add new module pam_sepermit.
	* modules/Makefile.am: Add new module pam_sepermit.
	* modules/pam_sepermit/.cvsignore: New file.
	* modules/pam_sepermit/Makefile.am: Likewise.
	* modules/pam_sepermit/README.xml: Likewise.
	* modules/pam_sepermit/pam_sepermit.8.xml: Likewise.
	* modules/pam_sepermit/pam_sepermit.c: Likewise.
	* modules/pam_sepermit/sepermit.conf: Likewise.