@@ -6,10 +6,10 @@ SUBDIRS = pam_access pam_cracklib pam_debug pam_deny pam_echo \
 	pam_env pam_filter pam_ftp pam_group pam_issue pam_keyinit \
 	pam_lastlog pam_limits pam_listfile pam_localuser pam_mail \
 	pam_mkhomedir pam_motd pam_nologin pam_permit pam_rhosts pam_rootok \
-	pam_securetty pam_selinux pam_shells pam_stress pam_succeed_if \
-	pam_tally pam_time pam_tty_audit pam_umask pam_unix pam_userdb \
-	pam_warn pam_wheel pam_xauth pam_exec pam_namespace pam_loginuid \
-	pam_faildelay
+	pam_securetty pam_selinux pam_sepermit pam_shells pam_stress \
+	pam_succeed_if pam_tally pam_time pam_tty_audit pam_umask \
+	pam_unix pam_userdb pam_warn pam_wheel pam_xauth pam_exec \
+	pam_namespace pam_loginuid pam_faildelay
 
 CLEANFILES = *~
 
